<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:padding="@dimen/padding_medium"
    android:layout_margin="@dimen/margin_large"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/imageBack"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:padding="@dimen/padding_small"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@mipmap/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAuthorization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_account_message"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/margin_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewAuthorization"
        app:layout_constraintVertical_bias="0.2">

        <LinearLayout
            android:id="@+id/linearName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/editTextFirstName"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_weight="1"
                android:background="@drawable/edittext_bg"
                android:hint="@string/first_name_hint"
                android:inputType="text"
                android:paddingStart="@dimen/padding_medium"
                android:paddingEnd="@dimen/padding_medium"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/editTextLastName"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_weight="1"
                android:background="@drawable/edittext_bg"
                android:hint="@string/last_name_hint"
                android:inputType="text"
                android:paddingStart="@dimen/padding_medium"
                android:paddingEnd="@dimen/padding_medium"
                android:textColorHint="@color/black" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextGroup"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/edittext_bg"
            android:hint="@string/group_hint"
            android:inputType="text"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginHorizontal="60dp"
        android:text="@string/night_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:backgroundTint="@color/blue"

        android:visibility="invisible"

        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>