<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:padding="@dimen/padding_medium"
    android:layout_margin="@dimen/margin_large"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageBack"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:padding="@dimen/padding_small"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@mipmap/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAuthorization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_account_message"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/margin_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewAuthorization">

        <LinearLayout
            android:id="@+id/linearName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/margin_small">

            <EditText
                android:id="@+id/firstNameEditText"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_small"
                android:background="@drawable/edittext_bg"
                android:hint="@string/first_name_hint"
                android:textColorHint="@color/black"
                android:inputType="text"
                android:paddingStart="@dimen/padding_medium"
                android:paddingEnd="@dimen/padding_medium"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/lastNameEditText"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/edittext_bg"
                android:hint="@string/last_name_hint"
                android:textColorHint="@color/black"
                android:inputType="text"
                android:paddingStart="@dimen/padding_medium"
                android:paddingEnd="@dimen/padding_medium"
                android:layout_weight="1"/>
        </LinearLayout>

        <EditText
            android:id="@+id/groupEditText"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/edittext_bg"
            android:hint="@string/group_hint"
            android:textColorHint="@color/black"
            android:inputType="text"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium"
            app:layout_constraintTop_toBottomOf="@id/linearName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/loginEditText"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/edittext_bg"
            android:hint="Login"
            android:textColorHint="@color/black"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium"
            app:layout_constraintTop_toBottomOf="@id/groupEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/edittext_bg"
            android:hint="@string/password_hint"
            android:textColorHint="@color/black"
            android:inputType="textPassword"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium"
            app:layout_constraintTop_toBottomOf="@id/loginEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="@color/blue"
        android:text="@string/create_account_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
