<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:padding="@dimen/padding_medium"
    android:layout_margin="@dimen/margin_large"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddQueueActivity">

    <ImageView
        android:id="@+id/imageBack"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:padding="@dimen/padding_small"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@mipmap/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAuthorization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_queue_message"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/margin_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_large"
        app:layout_constraintBottom_toTopOf="@+id/buttonSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewAuthorization"
        app:layout_constraintVertical_bias="0.2">

        <EditText
            android:id="@+id/editTextGroup"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_height"
            android:background="@drawable/edittext_bg"
            android:hint="@string/queue_name_hint"
            android:inputType="text"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hintTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/info_hint"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextGroup" />

        <EditText
            android:id="@+id/textViewInfo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/edittext_bg"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hintTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin_small"
        android:backgroundTint="@color/blue"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>