<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:padding="@dimen/padding_medium"
    android:layout_margin="@dimen/margin_large"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:padding="@dimen/padding_small"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@mipmap/ic_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewQueueList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/queue_list"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextSearch"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@drawable/search_bg"
        android:hint="@string/search_hint"
        android:textColorHint="@color/black"
        android:inputType="text"
        android:paddingStart="@dimen/padding_medium"
        android:paddingEnd="@dimen/padding_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewQueueList" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_small"
        android:backgroundTint="@color/blue"
        android:text="Clear"
        app:layout_constraintEnd_toEndOf="@+id/editTextSearch"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearch" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewQueueList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/margin_medium"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddQueue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonClear" />

    <Button
        android:id="@+id/buttonAddQueue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_queue"
        android:backgroundTint="@color/blue"
        android:layout_marginBottom="@dimen/margin_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>